crates/pamoja-ffi/include/pamoja.h


typedef enum {
  PamojaElbow_Up = 0,
  PamojaElbow_Down = 1,
} PamojaElbow;
typedef struct PamojaEStop PamojaEStop;
typedef struct PamojaLimits PamojaLimits;
typedef struct PamojaOdometry PamojaOdometry;
typedef struct PamojaSafetyGate PamojaSafetyGate;
typedef struct PamojaWatchdog PamojaWatchdog;
typedef struct {
  double latitude;
  double longitude;
} PamojaCoordinate;
typedef struct {
  float left;
  float right;
} PamojaSideSpeeds;
typedef struct {
  float track;
} PamojaDiffDrive;
typedef struct {
  float linear;
  float angular;
} PamojaBodyMotion;
typedef struct {
  float wheelbase;
} PamojaAckermann;
typedef struct {
  float track;
  float slip;
} PamojaSkidSteer;
typedef struct {
  float front_left;
  float front_right;
  float rear_left;
  float rear_right;
} PamojaWheelSpeeds;
typedef struct {
  float wheelbase;
  float track;
} PamojaMecanum;
typedef struct {
  float vx;
  float vy;
  float omega;
} PamojaTwist;
typedef struct {
  float min;
  float max;
} PamojaReach;
typedef struct {
  float l1;
  float l2;
} PamojaTwoLinkArm;
typedef struct {
  float x;
  float y;
} PamojaPoint;
typedef struct {
  float shoulder;
  float elbow;
} PamojaJoints;
typedef struct {
  float m[16];
} PamojaTransform;
typedef struct {
  float a;
  float alpha;
  float d;
  float theta;
} PamojaDhParameters;
typedef struct {
  float x;
  float y;
  float theta;
} PamojaPose;
typedef struct {
  PamojaTwist twist;
  double distance_m;
  float heading_error_deg;
  uint8_t arrived;
} PamojaGuidance;
typedef struct {
  float cruise;
  double arrival_m;
  float heading_gain;
  float max_angular;
} PamojaWaypointFollower;
typedef struct {
  uint16_t min_us;
  uint16_t max_us;
  float range_deg;
} PamojaServoMap;
typedef struct {
  uint16_t min_us;
  uint16_t neutral_us;
  uint16_t max_us;
} PamojaEsc;
PamojaSideSpeeds pamoja_diff_drive_wheel_speeds(PamojaDiffDrive drive, float linear, float angular);
PamojaBodyMotion pamoja_diff_drive_body_motion(PamojaDiffDrive drive, float left, float right);
float pamoja_ackermann_steering_angle(PamojaAckermann car, float linear, float angular);
float pamoja_ackermann_yaw_rate(PamojaAckermann car, float linear, float steering);
float pamoja_ackermann_turn_radius(PamojaAckermann car, float steering);
float pamoja_ackermann_curvature(PamojaAckermann car, float steering);
PamojaSideSpeeds pamoja_skid_steer_wheel_speeds(PamojaSkidSteer drive, float linear, float angular);
PamojaBodyMotion pamoja_skid_steer_body_motion(PamojaSkidSteer drive, float left, float right);
PamojaWheelSpeeds pamoja_mecanum_wheel_speeds(PamojaMecanum base, PamojaTwist twist);
PamojaTwist pamoja_mecanum_body_motion(PamojaMecanum base, PamojaWheelSpeeds wheels);
PamojaReach pamoja_two_link_arm_reach(PamojaTwoLinkArm arm);
PamojaPoint pamoja_two_link_arm_tip(PamojaTwoLinkArm arm, float shoulder, float elbow);
bool pamoja_two_link_arm_joints_for(PamojaTwoLinkArm arm,
                                    float x,
                                    float y,
                                    PamojaElbow elbow,
                                    PamojaJoints *out_joints);
PamojaTransform pamoja_dh_transform(PamojaDhParameters joint);
PamojaTransform pamoja_forward_kinematics(const PamojaDhParameters *joints, uintptr_t len);
PamojaTransform pamoja_transform_multiply(PamojaTransform first, PamojaTransform second);
PamojaTransform pamoja_transform_identity(void);
PamojaOdometry *pamoja_odometry_new(PamojaPose start);
PamojaPose pamoja_odometry_pose(const PamojaOdometry *odometry);
void pamoja_odometry_reset(PamojaOdometry *odometry, PamojaPose pose);
PamojaPose pamoja_odometry_integrate(PamojaOdometry *odometry,
                                     float linear,
                                     float angular,
                                     float dt);
PamojaPose pamoja_odometry_integrate_wheels(PamojaOdometry *odometry,
                                            float left,
                                            float right,
                                            PamojaDiffDrive drive);
void pamoja_odometry_fuse_heading(PamojaOdometry *odometry, float measured, float weight);
void pamoja_odometry_free(PamojaOdometry *odometry);
PamojaGuidance pamoja_waypoint_follower_guide(PamojaWaypointFollower follower,
                                              PamojaCoordinate here,
                                              float heading_deg,
                                              PamojaCoordinate target);
PamojaTwist pamoja_obstacle_stop(PamojaTwist twist, float range_m, float stop_distance_m);
PamojaEStop *pamoja_estop_new(void);
void pamoja_estop_engage(PamojaEStop *estop);
void pamoja_estop_reset(PamojaEStop *estop);
bool pamoja_estop_is_engaged(const PamojaEStop *estop);
PamojaTwist pamoja_estop_gate(const PamojaEStop *estop, PamojaTwist desired);
void pamoja_estop_free(PamojaEStop *estop);
PamojaWatchdog *pamoja_watchdog_new(float timeout);
void pamoja_watchdog_feed(PamojaWatchdog *watchdog);
bool pamoja_watchdog_update(PamojaWatchdog *watchdog, float dt);
bool pamoja_watchdog_is_expired(const PamojaWatchdog *watchdog);
void pamoja_watchdog_free(PamojaWatchdog *watchdog);
PamojaLimits *pamoja_limits_new(float max_linear,
                                float max_angular,
                                float max_linear_accel,
                                float max_angular_accel);
PamojaTwist pamoja_limits_apply(PamojaLimits *limits, PamojaTwist desired, float dt);
void pamoja_limits_reset(PamojaLimits *limits);
void pamoja_limits_free(PamojaLimits *limits);
PamojaSafetyGate *pamoja_safety_gate_new(const PamojaLimits *limits, float watchdog_timeout);
void pamoja_safety_gate_feed(PamojaSafetyGate *gate);
void pamoja_safety_gate_engage_estop(PamojaSafetyGate *gate);
void pamoja_safety_gate_reset_estop(PamojaSafetyGate *gate);
bool pamoja_safety_gate_is_stopped(const PamojaSafetyGate *gate);
PamojaTwist pamoja_safety_gate_command(PamojaSafetyGate *gate, PamojaTwist desired, float dt);
void pamoja_safety_gate_free(PamojaSafetyGate *gate);
PamojaServoMap pamoja_servo_map_standard(void);
uint16_t pamoja_servo_map_pulse(PamojaServoMap servo, float angle_deg);
float pamoja_servo_map_angle(PamojaServoMap servo, uint16_t pulse_us);
PamojaEsc pamoja_esc_bidirectional(void);
uint16_t pamoja_esc_pulse(PamojaEsc esc, float throttle);